# traitor_sorted-output

./: README.md  pyproject.toml
traitor/: tools.py
traitor/cli/: __init__.py  extract_ordered.py
